--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
   <div class='js-main' />
+  <!-- <script src="./dom.js"></script> -->
   <script src="./index.js"></script>
 
 </body>
